guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Určitý Issuer pro Let's Encrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Přesměrování HTTP na HTTPS
spec:
  rules:
    - host: guestbook.example.com  # Nahraďte svou doménou
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui-svc
                port:
                  number: 80
  tls:
    - hosts:
        - guestbook.example.com  # Nahraďte svou doménou
      secretName: servicedesk-tls  # Název tajného klíče pro certifikát Let's Encrypt
